<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs.module</groupId>
	<artifactId>sync</artifactId>
	<version>1.3-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Synchronization Module</name>
	<description>Parent project for Synchronization Module</description>

	<url>http://openmrs.org</url>

	<scm>
		<connection>scm:git:https://github.com/openmrs/openmrs-module-sync/</connection>
		<developerConnection>scm:git:https://github.com/openmrs/openmrs-module-sync/</developerConnection>
		<url>https://github.com/openmrs/openmrs-module-sync/</url>
	  <tag>HEAD</tag>
  </scm>

	<modules>
		<module>api</module>
		<module>omod</module>
	</modules>

	<dependencies>

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.4</version>
		</dependency>

		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.1</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
			<groupId>ca.juliusdavies</groupId>
			<artifactId>not-yet-commons-ssl</artifactId>
			<version>0.3.9</version>
		</dependency>

		<dependency>
			<groupId>org.openmrs.api</groupId>
			<artifactId>openmrs-api</artifactId>
			<version>${openMRSVersion}</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.openmrs.api</groupId>
			<artifactId>openmrs-api</artifactId>
			<version>${openMRSVersion}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.openmrs.web</groupId>
			<artifactId>openmrs-web</artifactId>
			<version>${openMRSVersion}</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.openmrs.web</groupId>
			<artifactId>openmrs-web</artifactId>
			<version>${openMRSVersion}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.openmrs.test</groupId>
			<artifactId>openmrs-test</artifactId>
			<version>${openMRSVersion}</version>
			<type>pom</type>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<properties>
		<openMRSVersion>1.9.3</openMRSVersion>
        <openMRSMinorVersion>1.9</openMRSMinorVersion>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<target>1.6</target>
						<source>1.6</source>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openmrs.maven.plugins</groupId>
					<artifactId>maven-openmrs-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.4</version>
				</plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <tagNameFormat>@{project.version}</tagNameFormat>
                    </configuration>
                </plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<executions>
						<execution>
							<goals>
								<goal>test-jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.13</version>
					<configuration>
						<includes>
							<include>**/*Test.java</include>
						</includes>
						<argLine>-Duser.language=en -Duser.region=US -Xmx512m -XX:MaxPermSize=512m</argLine>
					</configuration>
				</plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.9.1</version>
                </plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>


	<distributionManagement>
		<repository>
			<id>openmrs-repo-modules</id>
			<name>OpenMRS Modules</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules</url>
		</repository>
		<snapshotRepository>
			<id>openmrs-repo-snapshots</id>
			<name>OpenMRS Snapshots</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
	
	<profiles>
    	<profile>
        	<id>openmrs-1.9.0</id>
        	<properties>
            	<openMRSVersion>1.9.0</openMRSVersion>
				<openMRSMinorVersion>1.9</openMRSMinorVersion>
        	</properties>
    	</profile>
    	<profile>
        	<id>openmrs-1.9.1</id>
        	<properties>
            	<openMRSVersion>1.9.1</openMRSVersion>
				<openMRSMinorVersion>1.9</openMRSMinorVersion>
        	</properties>
    	</profile>
    	<profile>
        	<id>openmrs-1.9.2</id>
        	<properties>
            	<openMRSVersion>1.9.2</openMRSVersion>
				<openMRSMinorVersion>1.9</openMRSMinorVersion>
        	</properties>
    	</profile>
    	<profile>
        	<id>openmrs-1.10</id>
        	<properties>
            	<openMRSVersion>1.10.0-SNAPSHOT</openMRSVersion>
				<openMRSMinorVersion>1.10</openMRSMinorVersion>
        	</properties>
    	</profile>
	</profiles>

</project>
